--- a/src/example.css
+++ b/src/example.css
@@ -4,6 +4,8 @@
   width: 300px;
   height: 1000px;
   margin: 0 auto;
+  /* stylelint-disable no-indistinguishable-colors */
+  /* multiple layered box shaodw for fun */
   box-shadow:
     0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 1px 5px 0 rgba(0, 0, 0, 0.12),
